css second push

--- a/scooby.html
+++ b/scooby.html
@@ -14,6 +14,8 @@
 			<div class="scooby-casual"></div>
 			<div class="scooby-car"></div>
 			<div class="scooby-scared"></div>
+		</div>
+		<div class="the-ghost">
 			<div class="scooby-ghost"></div>
 		</div>
 	</div>
