--- a/scooby.html
+++ b/scooby.html
@@ -1,23 +1,24 @@
-<!DOCTYPE html>
+ <!DOCTYPE html>
 <html lang="eng">
 <head>
-	<meta charset="UTF-8">
-	<title>Scooby Doo</title>
-	<link rel="stylesheet" href="css/style.css">
-	<script src="http://code.jquery.com/jquery.min.js"></script>
-	<script src="js/app.js"></script>
+    <meta charset="UTF-8">
+    <title>Scooby Doo</title>
+    <link rel="stylesheet" type="text/css" href="css/style.css">
+    <script src="http://code.jquery.com/jquery.min.js"></script>
+    <script src="js/app.js"></script>
+    
 </head>
 
 <body>
-	<div class="main">
-		<div class="the-gang">
-			<div class="scooby-casual"></div>
-			<div class="scooby-car"></div>
-			<div class="scooby-scared"></div>
-		</div>
-		<div class="the-ghost">
-			<div class="scooby-ghost"></div>
-		</div>
-	</div>
+    <div class="main">
+        <div class="the-gang">
+            <div class="scooby-casual"> <img src="images/scooby-casual.jpg"></div>
+            <div class="scooby-car"> <img height="360" width="360" src="images/scooby-car.jpg"></div>
+            <div class="scooby-scared"><img src="images/scooby-scared.gif"></div>
+        </div>
+        <div class="the-ghost">
+            <div class="scooby-ghost"><img height="760" width="500" src="images/scooby-ghost.gif"></div>
+        </div>
+    </div>
 </body>
-</html>
+</html> 
