--- a/scooby.html
+++ b/scooby.html
@@ -4,9 +4,8 @@
     <meta charset="UTF-8">
     <title>Scooby Doo</title>
     <link rel="stylesheet" type="text/css" href="css/style.css">
-    <script src="http://code.jquery.com/jquery.min.js"></script>
+    <script src="js/jquery-2.1.4.min.js"></script>
     <script src="js/app.js"></script>
-    
 </head>
 
 <body>
