--- a/scooby.html
+++ b/scooby.html
@@ -1,4 +1,4 @@
- <!DOCTYPE html>
+ <!doctype html>
 <html lang="eng">
 <head>
     <meta charset="UTF-8">
@@ -19,5 +19,6 @@
             <div class="scooby-ghost"><img height="760" width="500" src="images/scooby-ghost.gif"></div>
         </div>
     </div>
+    <audio id="scooby-song" src="scooby-song.m4a">
 </body>
 </html> 
